[gd_scene load_steps=13 format=3 uid="uid://chypnya1v5eco"]

[ext_resource type="Script" uid="uid://dl6wq7ltmawb2" path="res://game/bullets/bullet.gd" id="1_lpncf"]
[ext_resource type="Texture2D" uid="uid://dwk6ob7whfamm" path="res://assets/graphics/projectile_bullet.png" id="2_lpncf"]
[ext_resource type="Script" uid="uid://byr4re0h778g2" path="res://game/bullets/bullet_hitbox.gd" id="3_6lv4x"]
[ext_resource type="Texture2D" uid="uid://dxbmvdb2rlcu1" path="res://assets/graphics/glow.png" id="3_bjpdu"]
[ext_resource type="AudioStream" uid="uid://d01pn0s4nxv4o" path="res://assets/sfx/gameplay/UI/sfx_powerup_deflect.ogg" id="5_0imy6"]
[ext_resource type="AudioStream" uid="uid://hb52t5wsml7a" path="res://assets/sfx/gameplay/UI/sfx_powerup_deflect2.ogg" id="6_ls5vv"]
[ext_resource type="AudioStream" uid="uid://b5xobbrmi3yc6" path="res://assets/sfx/gameplay/UI/sfx_powerup_deflect3.ogg" id="7_nvifh"]
[ext_resource type="AudioStream" uid="uid://0ublv0peagup" path="res://assets/sfx/gameplay/UI/sfx_powerup_deflect4.ogg" id="8_s1hyr"]
[ext_resource type="AudioStream" uid="uid://fawnf3sykmwj" path="res://assets/sfx/gameplay/UI/sfx_powerup_deflect5.ogg" id="9_gxotd"]
[ext_resource type="AudioStream" uid="uid://daaxqwu5f66ek" path="res://assets/sfx/gameplay/UI/sfx_powerup_deflect6.ogg" id="10_wbrql"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vn6h8"]
radius = 24.0832

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_r3jdn"]
streams_count = 6
stream_0/stream = ExtResource("5_0imy6")
stream_1/stream = ExtResource("6_ls5vv")
stream_2/stream = ExtResource("7_nvifh")
stream_3/stream = ExtResource("8_s1hyr")
stream_4/stream = ExtResource("9_gxotd")
stream_5/stream = ExtResource("10_wbrql")

[node name="Bullet" type="Node2D" groups=["bullets"]]
script = ExtResource("1_lpncf")

[node name="Shadow" type="Sprite2D" parent="."]
self_modulate = Color(0.486275, 0.145098, 0.117647, 1)
z_index = -1
texture = ExtResource("2_lpncf")
vframes = 3
frame = 1

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(0, -50)
texture = ExtResource("2_lpncf")
vframes = 3

[node name="Glow" type="Sprite2D" parent="Sprite"]
self_modulate = Color(1, 0.720167, 0.27, 0.392157)
show_behind_parent = true
scale = Vector2(0.249135, 0.16955)
texture = ExtResource("3_bjpdu")

[node name="Hitbox" type="Area2D" parent="." node_paths=PackedStringArray("bullet")]
collision_layer = 8
collision_mask = 521
script = ExtResource("3_6lv4x")
bullet = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
rotation = 1.5708
shape = SubResource("CircleShape2D_vn6h8")

[node name="Lifetime" type="Timer" parent="."]
wait_time = 5.0

[node name="BounceSound" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_r3jdn")

[connection signal="area_entered" from="Hitbox" to="." method="_on_hit"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hit_body"]
[connection signal="timeout" from="Lifetime" to="." method="_on_lifetime_timeout"]
